# encrypted-textsearch-poc

./: .dockerignore  .gitignore  .secrets.example.toml  Dockerfile  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml  settings.toml
app/: get_app.py
app/app_init/: app_lifespan.py  routes.py  settings_validation.py
app/core/mysql/: dependencies.py  errors.py  pool_manager.py
app/core/opensearch/: client.py  dependencies.py
app/modules/messages/: dao.py  schemes.py  views.py
