[tool.poetry]
name = "encrypted-textsearch-poc"
version = "0.1.0"
description = ""
authors = ["Evgeniy Moiseev <evgeniymsev_at_gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
aiomysql = "^0.2.0"
uvicorn = "^0.23.2"
dynaconf = "^3.2.3"
asgi-lifespan = "^2.1.0"
opensearch-py = {extras = ["async"], version = "^2.4.2"}
httpx = "^0.26.0"
pycryptodome = "^3.20.0"
cryptography = "^42.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
types-pymysql = "^1.1.0.1"
freezegun = "^1.2.2"
black = "^24.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
